--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: master
+        path: source
 
     - name: Checkout sdk automation scripts
       uses: actions/checkout@v3
@@ -23,10 +24,12 @@ jobs:
 
     - name: Setup iOS
       uses: ./sdk-automation-scripts/actions/ios-action-setup
+      working-directory: ./source
       env:
         SDK_BOT_ACCESS_TOKEN: ${{ secrets.SDK_BOT_ACCESS_TOKEN }}
 
     - name: Publish pods
-      run: ./Utilities/pod_publish.rb
+      run: ${{ github.workspace }}/sdk-automation-scripts/scripts/release/ios/pod_push.rb
+      working-directory: ./source
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
