--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "name": "MoEngageKMMConditionEvaluator",
       "version": "1.0.0",
       "hash": "16fb97f6c5973c6daed338307e717427aad470ea9e913252b3de5f9a1e209485",
+      "url": "https://github.com/moengage/kmm-apple-sdk/releases/download/1.0.0/MoEngageKMMConditionEvaluator.xcframework.zip",
       "changelog": "CHANGELOG.md",
       "tagPrefix": "kmmce-"
     }
